syntax = "proto3";

option go_package = "../kvnode";

service RaftKV{
  rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesReply){}
  rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply){}
  rpc Operate (Operation) returns (Opreturn) {}
}

message AppendEntriesArgs{
  int64 term = 1;
  int64 leaderId = 2;
  int64 prevLogIndex = 3;
  int64 prevLogTerm = 4;
  int64 leaderCommit = 5;
  repeated logEntry entries = 6;
}

message AppendEntriesReply{
  int64 term = 1;
  bool success = 2;
}

message RequestVoteArgs{
  int64 term = 1;
  int64 candidateId = 2;
  int64 lastLogIndex = 3;
  int64 lastLogTerm = 4;
}

message RequestVoteReply{
  int64 term = 1;
  bool voteGranted = 2;
}

message logEntry{
  int64 term = 1;
  int64 index = 2;
  string op = 3;
  string key = 4;
  sint32 value = 5;
}

message Operation{
  string  op = 1;
  string key = 2;
  sint32 value = 3;
}

message Opreturn{
  bool success = 1;
}